Agregado nuevo item diferencial en la lista distintivos

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                 <li class="items">Atencion personalizada a los clientes</li>
                 <li class="items">Espacio diferenciado</li>
                 <li class="items">Localizacion</li>
-                <li class="items">Profesionales calificados </li>
+                <li class="items">Profesionales calificados</li>
+                <li class="items">Esquema de fidelizacion para clientes VIP</li>
             </ul>
 
             <img src="diferenciales/diferenciales.jpg" class="imagenDiferenciales">
