--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li class="items">Espacio diferenciado</li>
                 <li class="items">Localizacion</li>
                 <li class="items">Profesionales calificados</li>
-                <li class="items">Esquema de fidelización para clientes VIP</li>
+                <li class="items">Esquema de fidelización para clientes VIP: Sorteo de bonos para corte de cabello</li>
             </ul>
 
             <img src="diferenciales/diferenciales.jpg" class="imagenDiferenciales">
