Agregando nuevo item a la lista distintivos de los diferenciales

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <li class="items">Localizacion</li>
                 <li class="items">Profesionales calificados: Titulo de barbero certificado</li>
                 <li class="items">Esquema de fidelización para clientes VIP: Sorteo de bonos para corte de cabello</li>
+                <li class="items">Sala de espera interactiva</li>
             </ul>
 
             <img src="diferenciales/diferenciales.jpg" class="imagenDiferenciales">
