--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li class="items">Atencion personalizada a los clientes</li>
                 <li class="items">Espacio diferenciado</li>
                 <li class="items">Localizacion</li>
-                <li class="items">Profesionales calificados</li>
+                <li class="items">Profesionales calificados: Titulo de barbero certificado</li>
                 <li class="items">Esquema de fidelización para clientes VIP: Sorteo de bonos para corte de cabello</li>
             </ul>
 
