Modificar la abreviatura de <Devops> en el title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Barberia Alura - DevOps</title>
+        <title>Barberia Alura - Developtment operations</title>
         <link rel="stylesheet" href="style_home.css">        
     </head>
 
