Modificando la localizacion de los diferenciales

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <ul class="distintivos">
                 <li class="items">Atencion personalizada a los clientes</li>
                 <li class="items">Espacio diferenciado</li>
-                <li class="items">Localizacion</li>
+                <li class="items">Localizacion: Zona de facil acceso y parqueadero</li>
                 <li class="items">Profesionales calificados: Titulo de barbero certificado</li>
                 <li class="items">Esquema de fidelización para clientes VIP: Sorteo de bonos para corte de cabello</li>
                 <li class="items">Sala de espera interactiva: area de videojuegos y zona refrescante</li>
